k8s/ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: chatapp
  labels:
    app: ui
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 80
      nodePort: 32697
      name: http
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: chatapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: ui-html
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 10
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
      volumes:
        - name: ui-html
          configMap:
            name: ui-config
